--- a/Mapping_Single_Points/index.html
+++ b/Mapping_Single_Points/index.html
@@ -12,7 +12,10 @@
 </head>
 <body>
     <!-- The div that holds our map -->
-    <div id="mapid"></div>
+    <div id="mapid" style="height: 600px;"></div>
+
+
+
     <!-- Make sure you put this AFTER Leaflet's CSS -->
     <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"
         integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA=="
